--- a/home/config/flameshot/flameshot.ini
+++ b/home/config/flameshot/flameshot.ini
@@ -4,7 +4,7 @@ checkForUpdates=false
 contrastOpacity=188
 contrastUiColor=#6746C4
 disabledTrayIcon=true
-drawColor=#00ffff
+drawColor=#ff0000
 drawThickness=0
 savePath=/home/alternateved/Pictures
 savePathFixed=true
