--- a/home/config/polybar/config.ini
+++ b/home/config/polybar/config.ini
@@ -138,7 +138,7 @@ format-charging-background =
 label-charging = " %percentage%%"
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-background =
-format-discharging-foreground = ${color.alert}
+format-discharging-foreground = ${colors.alert}
 label-discharging = " %percentage%%"
 format-full = <label-full>
 format-full-prefix = " "
