--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 result
 **/home/config/vifm/vifminfo.json
+**/home/config/qutebrowser/qsettings/
 **/home/config/qutebrowser/bookmarks/
 **/home/config/qutebrowser/quickmarks
