Add GitHub module

--- a/home/config/polybar/config.ini
+++ b/home/config/polybar/config.ini
@@ -38,13 +38,12 @@ modules-left   = workspaces title
 
 [bar/main]
 inherit = bar/base
-monitor = HDMI-1
-monitor-fallback = eDP-1
-modules-right  = notifications weather cpu memory alsa battery date time
+monitor = ${env:MONITOR:}
+modules-right  = github notifications weather cpu memory alsa battery date time
 
 [bar/aux]
 inherit = bar/base
-monitor = eDP-1
+monitor = ${env:MONITOR:}
 modules-right  =  time
 
 [settings]
@@ -52,7 +51,7 @@ screenchange-reload = true
 
 [module/workspaces]
 type = internal/xworkspaces
-pin-workspaces = false
+pin-workspaces = true
 enable-click = true
 enable-scroll = true
 format-padding = 1
@@ -83,9 +82,9 @@ label-maxlen = 60
 [module/notifications]
 type = custom/script
 tail = true
-format-padding = 1
+format-padding = 0
 click-left = dunstctl set-paused toggle
-exec =  "if [[ $(dunstctl is-paused) = false ]]; then echo ''; else echo ''; fi"
+exec =  "if [[ $(dunstctl is-paused) = false ]]; then echo ' '; else echo ' '; fi"
 
 [module/time]
 type     = internal/date
@@ -160,3 +159,11 @@ animation-charging-framerate = 750
 type = custom/script
 exec = curl -s wttr.in/lodz?format="%C+%t\n"
 interval = 3600
+
+[module/github]
+type = internal/github
+token = ${file:/home/alternateved/.cache/access.token}
+label = GitHub: %notifications%
+user = alternateved
+empty-notifications = false
+interval = 10
