--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ result
 **/home/config/vifm/vifminfo.json
 **/home/config/qutebrowser/qsettings/
 **/home/config/qutebrowser/bookmarks/
+**/home/config/qutebrowser/autoconfig.yml
 **/home/config/qutebrowser/quickmarks
