--- a/home/config/polybar/config.ini
+++ b/home/config/polybar/config.ini
@@ -18,7 +18,7 @@ margin-bottom = 0
 
 [bar/base]
 width  = 100%
-height = 18
+height = 25
 radius = 0.0
 bottom = false
 fixed-center = true
@@ -26,7 +26,7 @@ enable-ipc = true
 background = ${colors.background}
 foreground = ${colors.foreground}
 border-size  = 3
-border-color = ${colors.background}
+border-color = ${colors.gray}
 padding-left  = 1
 padding-right = 1
 module-margin = 1
