--- a/home/config/polybar/config.ini
+++ b/home/config/polybar/config.ini
@@ -18,7 +18,7 @@ margin-bottom = 0
 
 [bar/base]
 width  = 100%
-height = 25
+height = 20
 radius = 0.0
 bottom = false
 fixed-center = true
@@ -33,17 +33,18 @@ module-margin = 1
 separator = |
 cursor-click  = pointer
 cursor-scroll = ns-resize
-font-0 = Iosevka Nerd Font:weight=medium:size=11;2
+font-0 = Iosevka Nerd Font:weight=medium:size=10;2
 modules-left   = workspaces title
 
 [bar/main]
 inherit = bar/base
-monitor = ${env:MONITOR:}
+monitor = HDMI-1
+monitor-fallback = eDP-1
 modules-right  = github notifications weather cpu memory alsa battery date time
 
 [bar/aux]
 inherit = bar/base
-monitor = ${env:MONITOR:}
+monitor = eDP-1
 modules-right  =  time
 
 [settings]
@@ -51,7 +52,7 @@ screenchange-reload = true
 
 [module/workspaces]
 type = internal/xworkspaces
-pin-workspaces = true
+pin-workspaces = false
 enable-click = true
 enable-scroll = true
 format-padding = 1
