--- a/home/config/xmonad/alternateved-xmonad.cabal
+++ b/home/config/xmonad/alternateved-xmonad.cabal
@@ -1,9 +1,16 @@
 cabal-version:      2.4
 name:               alternateved-xmonad
 version:            0.1.0.0
-extra-source-files: CHANGELOG.md
+
+common common
+  default-language:      Haskell2010
+  default-extensions:
+    LambdaCase
+  ghc-options:
+    -Wall
 
 executable alternateved-xmonad
+    import:           common
     main-is:          xmonad.hs
     build-depends:
         base,
@@ -13,5 +20,3 @@ executable alternateved-xmonad
         X11,
         containers,
         utf8-string,
-    -- hs-source-dirs:
-    default-language: Haskell2010
