--- a/home/config/herbstluftwm/herbstutils/utils/config
+++ b/home/config/herbstluftwm/herbstutils/utils/config
@@ -1,2 +1,5 @@
 #!/usr/bin/env bash
-DMENU="dmenu -nb #18181B -nf #E4E4E8 -sf #18181B -sb #E4E4E8 -fn Iosevka"
+bg=$(xrdb -query | grep '*.background' | cut -f2- -d'#')
+fg=$(xrdb -query | grep '*.foreground' | cut -f2- -d'#')
+
+DMENU="dmenu -nb #${bg} -nf #${fg} -sf #${bg} -sb #${fg} -fn Iosevka"
