Add spotify module

--- a/home/config/polybar/config.ini
+++ b/home/config/polybar/config.ini
@@ -38,7 +38,7 @@ modules-right  = github notifications weather cpu memory alsa battery date time
 [bar/aux]
 inherit = bar/base
 monitor = eDP-1
-modules-right  =  time
+modules-right  =  spotify time
 
 [settings]
 screenchange-reload = true
@@ -121,7 +121,7 @@ label = %gb_used% (%percentage_used%%)
 
 [module/battery]
 type = internal/battery
-full-at = 99
+full-at = 96
 battery = BAT0
 adapter = ADP1
 poll-interval = 60
