--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -24,21 +24,22 @@ padding-left  = 1
 padding-right = 1
 module-margin = 1
 separator = |
-cursor-click  = pointer
+cursor-click = pointer
 cursor-scroll = ns-resize
 font-0 = Iosevka Nerd Font:weight=medium:size=10;2
-modules-left   = workspaces title
 
 [bar/main]
 inherit = bar/base
 monitor = HDMI-1
 monitor-fallback = eDP-1
-modules-right  = github notifications weather cpu memory alsa battery date time
+modules-left = workspaces title
+modules-right = github notifications weather cpu memory alsa battery date time
 
 [bar/aux]
 inherit = bar/base
 monitor = eDP-1
-modules-right  =  spotify time
+modules-left = title
+modules-right = spotify time
 
 [settings]
 screenchange-reload = true
