--- a/config/scripts/config
+++ b/config/scripts/config
@@ -4,7 +4,8 @@
 bg=$(xrdb -query | grep '*.background' | cut -f2- -d'#')
 fg=$(xrdb -query | grep '*.foreground' | cut -f2- -d'#')
 
-DMENU="dmenu -nb #${bg} -nf #${fg} -sf #${bg} -sb #${fg} -fn Iosevka"
+# DMENU="dmenu -nb #${bg} -nf #${fg} -sf #${bg} -sb #${fg} -fn Iosevka"
+DMENU="rofi -dmenu"
 DMBROWSER="qutebrowser"
 DMTERM="alacritty -e"
 DMEDITOR="emacsclient -c -a emacs"
@@ -15,25 +16,23 @@ setbg_dir="${HOME}/Pictures/Wallpapers"
 # confedit
 confedit_editor="$DMEDITOR"
 declare -A confedit_list
-confedit_list[confedit]="$HOME/.nixos-config/home/config/dmscripts/config"
-confedit_list[colors]="$HOME/.nixos-config/home/modules/colors.nix"
-confedit_list[gtk]="$HOME/.nixos-config/home/modules/theme.nix"
-confedit_list[home]="$HOME/.nixos-config/home/default.nix"
-confedit_list[alacritty]="$HOME/.nixos-config/home/modules/alacritty.nix"
+confedit_list[confedit]="$HOME/.nixos-config/config/scripts/config"
+confedit_list[colors]="$HOME/.nixos-config/modules/theme/colors.nix"
+confedit_list[theme]="$HOME/.nixos-config/modules/theme/default.nix"
+confedit_list[extended]="$HOME/.nixos-config/extended.nix"
+confedit_list[alacritty]="$HOME/.nixos-config/modules/alacritty/default.nix"
 confedit_list[doom emacs config.el]="$HOME/.doom.d/config.el"
 confedit_list[doom emacs init.el]="$HOME/.doom.d/init.el"
 confedit_list[doom emacs packages.el]="$HOME/.doom.d/packages.el"
-confedit_list[dunst]="$HOME/.nixos-config/home/modules/dunst.nix"
-confedit_list[herbstluftwm]="$HOME/.nixos-config/home/config/herbstluftwm/autostart"
+confedit_list[dunst]="$HOME/.nixos-config/modules/dunst/default.nix"
+confedit_list[herbstluftwm]="$HOME/.nixos-config/config/herbstluftwm/autostart"
 confedit_list[neovim]="$HOME/.config/home/config/nvim/init.lua"
-confedit_list[picom]="$HOME/.nixos-config/home/modules/picom.nix"
-confedit_list[polybar]="$HOME/.nixos-config/home/config/polybar/config.ini"
-confedit_list[system]="$HOME/.nixos-config/system/default.nix"
-confedit_list[qutebrowser]="$HOME/.nixos-config/home/config/qutebrowser/config.py"
-confedit_list[vifm]="$HOME/.nixos-config/home/config/vifm/vifmrc"
-confedit_list[xmobar]="$HOME/.nixos-config/home/config/xmonad/xmobar.hs"
-confedit_list[xmonad]="$HOME/.nixos-config/home/config/xmonad/xmonad.hs"
-confedit_list[zathura]="$HOME/.nixos-config/home/modules/zathura.nix"
+confedit_list[picom]="$HOME/.nixos-config/modules/picom/default.nix"
+confedit_list[polybar]="$HOME/.nixos-config/config/polybar/config.ini"
+confedit_list[system]="$HOME/.nixos-config/hosts/teishi/default.nix"
+confedit_list[xmobar]="$HOME/.nixos-config/config/xmonad/xmobar.hs"
+confedit_list[xmonad]="$HOME/.nixos-config/config/xmonad/xmonad.hs"
+confedit_list[zathura]="$HOME/.nixos-config/modules/zathura/default.nix"
 
 # Search engine config
 websearch_browser="$DMBROWSER"
