--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -48,7 +48,7 @@ screenchange-reload = true
 type = internal/xworkspaces
 pin-workspaces = false
 enable-click = true
-enable-scroll = true
+enable-scroll = false
 format-padding = 1
 format = <label-state>
 label-active = %name%
