Adapt polybar to bspwm

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -18,7 +18,7 @@ fixed-center = true
 enable-ipc = true
 background = ${colors.background}
 foreground = ${colors.foreground}
-border-size  = 3
+border-size  = 0
 border-color = ${colors.gray}
 padding-left  = 1
 padding-right = 1
@@ -28,21 +28,49 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 font-0 = Iosevka Nerd Font:weight=medium:size=10;2
 
+wm-restack = bspwm
+
 [bar/main]
 inherit = bar/base
 monitor = HDMI-1
 monitor-fallback = eDP-1
-modules-left = workspaces title
+modules-left = bspwm title
 modules-right = github notifications weather cpu memory alsa battery date time
 
 [bar/aux]
 inherit = bar/base
 monitor = eDP-1
-modules-left = title
+modules-left = bspwm title
 modules-right = spotify time
 
 [settings]
 screenchange-reload = true
+
+[module/bspwm]
+type = internal/bspwm
+pin-workspaces = true
+enable-click = true
+enable-scroll = false
+format-padding = 1
+format = <label-state>
+label-active = %name%
+label-active-foreground = ${colors.foreground}
+label-active-overline = ${colors.foreground}
+label-active-underline = ${colors.foreground}
+label-active-padding = 1
+label-empty = %name%
+label-empty-foreground = ${colors.gray}
+label-empty-padding = 1
+label-urgent = %name%
+label-urgent-foreground = ${colors.alert}
+label-urgent-padding = 1
+label-inactive = %name%
+label-inactive-underline = ${colors.gray}
+label-inactive-padding = 1
+label-occupied = %name%
+label-occupied-foreground = ${colors.bright-gray}
+label-occupied-underline = ${colors.bright-gray}
+label-occupied-padding = 1
 
 [module/workspaces]
 type = internal/xworkspaces
