--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -5,6 +5,7 @@ contrastOpacity=188
 contrastUiColor=#6746C4
 disabledTrayIcon=true
 drawColor=#ff0000
+drawFontSize=8
 drawThickness=1
 savePath=/home/alternateved/Pictures/Screenshots
 savePathFixed=true
