--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -118,7 +118,7 @@ label = %time%
 [module/date]
 type     = internal/date
 interval = 5
-date  = %a %b %d
+date  = %A, %b %d
 label = %date%
 
 [module/pulseaudio]
