--- a/config/scripts/config
+++ b/config/scripts/config
@@ -1,10 +1,10 @@
 #!/usr/bin/env bash
 # shellcheck disable=SC2034
 # Defined variables, modify anything in quotes to your prefered software
-bg=$(xrdb -query | grep '*.background' | cut -f2- -d'#')
-fg=$(xrdb -query | grep '*.foreground' | cut -f2- -d'#')
+bg=$(xrdb -query | grep '*.background' | awk '{print $NF}')
+fg=$(xrdb -query | grep '*.foreground' | awk '{print $NF}')
 
-DMENU="dmenu -c -nb #${bg} -nf #${fg} -sf #${bg} -sb #${fg} -fn Iosevka"
+DMENU="dmenu -c -bw 2 -nb ${bg} -nf ${fg} -sf ${bg} -sb ${fg} -fn Iosevka"
 DMBROWSER="firefox"
 DMTERM="alacritty -e"
 DMEDITOR="emacsclient -c -a emacs"
