--- a/config/scripts/config
+++ b/config/scripts/config
@@ -26,8 +26,8 @@ confedit_list[doom emacs init.el]="$HOME/.doom.d/init.el"
 confedit_list[doom emacs packages.el]="$HOME/.doom.d/packages.el"
 confedit_list[dunst]="$HOME/.nixos-config/modules/dunst/default.nix"
 confedit_list[herbstluftwm]="$HOME/dotfiles/herbstluftwm/autostart"
-confedit_list[bspwm]="$HOME/dotfiles/bspwm/bspwmrc"
-confedit_list[sxkhd]="$HOME/dotfiles/sxhkd/sxhkdrc"
+confedit_list[bspwm]="$HOME/.nixos-config/config/bspwm/bspwmrc"
+confedit_list[sxkhd]="$HOME/.nixos-config/config/sxhkd/sxhkdrc"
 confedit_list[neovim]="$HOME/.config/home/config/nvim/init.lua"
 confedit_list[picom]="$HOME/.nixos-config/modules/picom/default.nix"
 confedit_list[polybar]="$HOME/.nixos-config/config/polybar/config.ini"
