--- a/config/scripts/config
+++ b/config/scripts/config
@@ -20,7 +20,7 @@ confedit_list[colors]="$HOME/.nixos-config/modules/theme/colors.nix"
 confedit_list[theme]="$HOME/.nixos-config/modules/theme/default.nix"
 confedit_list[extended]="$HOME/.nixos-config/extended.nix"
 confedit_list[alacritty]="$HOME/.nixos-config/modules/alacritty/default.nix"
-confedit_list[vanilla emacs]="$HOME/.emacs.d/init.el"
+confedit_list[vanilla emacs]="$HOME/.emacs.d/README.org"
 confedit_list[doom emacs config.el]="$HOME/.doom.d/config.el"
 confedit_list[doom emacs init.el]="$HOME/.doom.d/init.el"
 confedit_list[doom emacs packages.el]="$HOME/.doom.d/packages.el"
