Remove player module

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -1,9 +1,9 @@
 [colors]
-background           = ${xrdb:background}
-bright-gray          = ${xrdb:color7}
-foreground           = ${xrdb:foreground}
-gray                 = ${xrdb:color8}
-alert                = ${xrdb:color1}
+background    = ${xrdb:background}
+bright-gray   = ${xrdb:color7}
+foreground    = ${xrdb:foreground}
+gray          = ${xrdb:color8}
+alert         = ${xrdb:color1}
 
 [global/wm]
 margin-top    = 0
@@ -41,7 +41,7 @@ modules-right = github notifications weather cpu memory pulseaudio battery date 
 inherit = bar/base
 monitor = eDP-1
 modules-left = bspwm title
-modules-right = spotify time
+modules-right = time
 
 [settings]
 screenchange-reload = true
