--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -15,6 +15,7 @@ height = 20
 radius = 0.0
 bottom = false
 fixed-center = true
+underline-size = 1
 enable-ipc = true
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -69,7 +70,6 @@ label-inactive-underline = ${colors.gray}
 label-inactive-padding = 1
 label-occupied = %name%
 label-occupied-foreground = ${colors.bright-gray}
-label-occupied-underline = ${colors.bright-gray}
 label-occupied-padding = 1
 
 [module/workspaces]
