Fix formatting and remove those titles

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -35,7 +35,7 @@ wm-restack = bspwm
 inherit = bar/base
 monitor = HDMI-1
 monitor-fallback = eDP-1
-modules-left = bspwm title
+modules-left = bspwm
 modules-right = github notifications weather cpu memory pulseaudio battery date time
 
 [bar/aux]
@@ -97,10 +97,6 @@ label-occupied = %name%
 label-occupied-foreground = ${colors.bright-gray}
 label-occupied-underline = ${colors.bright-gray}
 label-occupied-padding = 1
-
-[module/title]
-type = internal/xwindow
-label-maxlen = 60
 
 [module/notifications]
 type = custom/script
@@ -180,7 +176,7 @@ animation-charging-framerate = 750
 
 [module/weather]
 type = custom/script
-exec = curl -s wttr.in/lodz?format="%C+%t\n"
+exec = curl -s wttr.in/lodz?format="%C+%t\n" | sed 's/+//'
 interval = 3600
 
 [module/github]
