Change memory icon

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -132,7 +132,7 @@ label = "%percentage:2%%"
 type = internal/memory
 interval = 3
 format = <label>
-format-prefix = "  "
+format-prefix = " "
 format-prefix-font = 0
 label = %gb_used% (%percentage_used%%)
 
