Clean up redundant modules

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -1,9 +1,9 @@
 [colors]
-background    = ${xrdb:background}
-bright-gray   = ${xrdb:color7}
-foreground    = ${xrdb:foreground}
-gray          = ${xrdb:color8}
-alert         = ${xrdb:color1}
+background   = ${xrdb:background}
+bright-gray  = ${xrdb:color7}
+foreground   = ${xrdb:foreground}
+gray         = ${xrdb:color8}
+alert        = ${xrdb:color1}
 
 [global/wm]
 margin-top    = 0
@@ -29,12 +29,11 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 font-0 = Iosevka Nerd Font:weight=medium:size=11;2
 
-wm-restack = bspwm
-
 [bar/main]
 inherit = bar/base
-modules-left = bspwm
+modules-left = bspwm title
 modules-right = github notifications weather cpu memory pulseaudio battery date time
+wm-restack = bspwm
 
 [settings]
 screenchange-reload = true
@@ -64,31 +63,9 @@ label-occupied = %name%
 label-occupied-foreground = ${colors.bright-gray}
 label-occupied-padding = 1
 
-[module/workspaces]
-type = internal/xworkspaces
-pin-workspaces = false
-enable-click = true
-enable-scroll = false
-format-padding = 1
-format = <label-state>
-label-active = %name%
-label-active-foreground = ${colors.foreground}
-label-active-overline = ${colors.foreground}
-label-active-underline = ${colors.foreground}
-label-active-padding = 1
-label-empty = %name%
-label-empty-foreground = ${colors.gray}
-label-empty-padding = 1
-label-urgent = %name%
-label-urgent-foreground = ${colors.alert}
-label-urgent-padding = 1
-label-inactive = %name%
-label-inactive-underline = ${colors.gray}
-label-inactive-padding = 1
-label-occupied = %name%
-label-occupied-foreground = ${colors.bright-gray}
-label-occupied-underline = ${colors.bright-gray}
-label-occupied-padding = 1
+[module/title]
+type = internal/xwindow
+label-maxlen = 70
 
 [module/notifications]
 type = custom/script
