Modify scripts for Wayland

--- a/config/scripts/config
+++ b/config/scripts/config
@@ -5,7 +5,7 @@ bg=$(xrdb -query | grep '*.background' | awk '{print $NF}')
 fg=$(xrdb -query | grep '*.foreground' | awk '{print $NF}')
 
 # DMENU="dmenu -c -bw 2 -nb ${bg} -nf ${fg} -sf ${bg} -sb ${fg} -fn Iosevka"
-DMENU="bemenu --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg} --fn Iosevka"
+DMENU="bemenu  --fn Iosevka Nerd Font 12 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
 DMBROWSER="firefox"
 DMTERM="alacritty -e"
 DMEDITOR="emacsclient -c -a emacs"
@@ -19,19 +19,18 @@ declare -A confedit_list
 confedit_list[confedit]="$HOME/.nixos-config/config/scripts/config"
 confedit_list[colors]="$HOME/.nixos-config/modules/theme/colors.nix"
 confedit_list[theme]="$HOME/.nixos-config/modules/theme/default.nix"
-confedit_list[extended]="$HOME/.nixos-config/extended.nix"
+confedit_list[extended]="$HOME/.nixos-config/modules/extended.nix"
 confedit_list[alacritty]="$HOME/.nixos-config/modules/alacritty/default.nix"
 confedit_list[vanilla emacs]="$HOME/.emacs.d/README.org"
-confedit_list[doom emacs config.el]="$HOME/.doom.d/config.el"
-confedit_list[doom emacs init.el]="$HOME/.doom.d/init.el"
-confedit_list[doom emacs packages.el]="$HOME/.doom.d/packages.el"
 confedit_list[dunst]="$HOME/.nixos-config/modules/dunst/default.nix"
+confedit_list[mako]="$HOME/.nixos-config/modules/mako/default.nix"
 confedit_list[herbstluftwm]="$HOME/dotfiles/herbstluftwm/autostart"
 confedit_list[bspwm]="$HOME/.nixos-config/config/bspwm/bspwmrc"
 confedit_list[sxkhd]="$HOME/.nixos-config/config/sxhkd/sxhkdrc"
 confedit_list[neovim]="$HOME/.config/home/config/nvim/init.lua"
 confedit_list[picom]="$HOME/.nixos-config/modules/picom/default.nix"
 confedit_list[polybar]="$HOME/.nixos-config/config/polybar/config.ini"
+confedit_list[sway]="$HOME/.nixos-config/modules/window-managers/sway.nix"
 confedit_list[system]="$HOME/.nixos-config/hosts/teishi/default.nix"
 confedit_list[xmobar]="$HOME/.nixos-config/config/xmobar/xmobar.hs"
 confedit_list[xmonad]="$HOME/.nixos-config/config/xmonad/xmonad.hs"
