--- a/config/scripts/config
+++ b/config/scripts/config
@@ -2,8 +2,8 @@
 
 # shellcheck disable=SC2034
 # Defined variables, modify anything in quotes to your prefered software
-bg=$(xrdb -query | grep '*.background' | awk '{print $NF}')
-fg=$(xrdb -query | grep '*.foreground' | awk '{print $NF}')
+bg=$(cat ~/.Xresources | grep '*.background' | awk '{print $NF}')
+fg=$(cat ~/.Xresources | grep '*.foreground' | awk '{print $NF}')
 
 # DMENU="dmenu -c -bw 2 -nb ${bg} -nf ${fg} -sf ${bg} -sb ${fg} -fn Iosevka"
 DMENU="bemenu --fn Iosevka Nerd Font 12 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
