Remove Volume module

--- a/config/xmobar/alternateved-xmobar.cabal
+++ b/config/xmobar/alternateved-xmobar.cabal
@@ -13,6 +13,7 @@ executable alternateved-xmobar
     main-is:          xmobar.hs
     build-depends:
         base,
+        process,
         xmobar,
+        X11-xft,
         xmonad-contrib,
-        process
