--- a/config/xmobar/cabal.project
+++ b/config/xmobar/cabal.project
@@ -1,4 +1,4 @@
 packages: ./alternateved-xmobar.cabal
 
 constraints:
-    xmobar +with_threaded +with_alsa +with_xft +with_mpris +with_weather
+    xmobar +with_threaded +with_xft +with_mpris +with_weather
