--- a/config/scripts/config
+++ b/config/scripts/config
@@ -23,6 +23,7 @@ confedit_list[colors]="$HOME/.nixos-config/modules/theme/colors.nix"
 confedit_list[theme]="$HOME/.nixos-config/modules/theme/default.nix"
 confedit_list[extended]="$HOME/.nixos-config/modules/extended.nix"
 confedit_list[alacritty]="$HOME/.nixos-config/modules/alacritty/default.nix"
+confedit_list[kitty]="$HOME/.nixos-config/modules/kitty/default.nix"
 confedit_list[vanilla emacs]="$HOME/.emacs.d/README.org"
 confedit_list[dunst]="$HOME/.nixos-config/modules/dunst/default.nix"
 confedit_list[mako]="$HOME/.nixos-config/modules/mako/default.nix"
