--- a/config/scripts/config
+++ b/config/scripts/config
@@ -6,10 +6,10 @@ bg=$(cat ~/.Xresources | grep '*.background' | awk '{print $NF}')
 fg=$(cat ~/.Xresources | grep '*.foreground' | awk '{print $NF}')
 
 # DMENU="dmenu -c -bw 2 -nb ${bg} -nf ${fg} -sf ${bg} -sb ${fg} -fn Iosevka"
-# DMENU="bemenu -c -M 600 --fn Iosevka Nerd Font 12 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
-DMENU="bemenu --fn Iosevka Nerd Font 12 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
+# DMENU="bemenu -c -M 600 --fn JuliaMono 11 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
+DMENU="bemenu --fn JuliaMono --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
 DMBROWSER="firefox"
-DMTERM="alacritty -e"
+DMTERM="kitty -e"
 DMEDITOR="emacsclient -c -a emacs"
 
 # wallpaper
