--- a/config/scripts/config
+++ b/config/scripts/config
@@ -5,9 +5,7 @@
 bg=$(cat ~/.Xresources | grep '*.background' | awk '{print $NF}')
 fg=$(cat ~/.Xresources | grep '*.foreground' | awk '{print $NF}')
 
-# DMENU="dmenu -c -bw 2 -nb ${bg} -nf ${fg} -sf ${bg} -sb ${fg} -fn Iosevka"
-# DMENU="bemenu -c -M 600 --fn JuliaMono 11 --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
-DMENU="bemenu --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"
+DMENU="bemenu -c -M 600 --fn JuliaMono --tb ${bg} --tf ${fg} --fb ${bg} --ff ${fg} --nb ${bg} --nf ${fg} --sf ${bg} --sb ${fg} --hb ${fg} --hf ${bg}"#
 DMBROWSER="firefox"
 DMTERM="kitty -e"
 DMEDITOR="emacsclient -c -a emacs"
